# circuitsim

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
demo/src/: main.cpp  main_window.cpp  main_window.hpp
src/: CMakeLists.txt  circuit.cpp  circuit.hpp  circuitsim.cpp  circuitsim.h  component.cpp  component.hpp  component_factory.cpp  component_factory.hpp  component_view.cpp  component_view.hpp  dc_context.cpp  dc_context.hpp  dc_context_view.cpp  dc_context_view.hpp  dc_solver.cpp  dc_solver.hpp  matrix.cpp  matrix.hpp  primitives.cpp  primitives.hpp
src/private/: algebra.hh  basic_circuit.hh  basic_component.hh  basic_component_view.hh  basic_resistor.hh  basic_voltage_source.hh  circuit.hh  component.hh  component_factory.hh  component_traits.hh  component_view.hh  component_with_value.hh  dc_context.hh  dc_solver.hh  ground.hh  matrix.hh  primitives.hh  resistor.hh  voltage_source.hh
src/ui/: circuit2d.cpp  circuit2d.hpp  circuit2d_painter.cpp  circuit2d_painter.hpp  component2d_factory.cpp  component2d_factory.hpp  component2d_view.cpp  component2d_view.hpp  draw_context_view.cpp  draw_context_view.hpp  point2d.hpp  primitives2d.cpp  primitives2d.hpp  svg_painter.cpp  svg_painter.hpp
src/ui/private/: AABB.hh  away_from_center_wiring_strategy.hpp  basic_circuit2d.hh  basic_component2d.hh  basic_component2d_view.hh  basic_resistor2d.hh  basic_voltage_source2d.hh  circuit2d.hh  circuit2d_painter.hh  component2d.hh  component2d_factory.hh  component2d_traits.hh  component2d_view.hh  draw_context_view.hh  drawable.hh  ground2d.hh  point2d.hh  primitives2d.hh  resistor2d.hh  rotatable.hh  same_axis_wiring_strategy.hh  svg_painter.hh  voltage_source2d.hh  wire2d.hh  wiring_strategy.hh  with_position.hh
